@@ -1405,6 +1405,7 @@ DBGPRINT(RT_DEBUG_INFO, ("%s(): txbw=%d, txmode=%d\n", __FUNCTION__, tx_bw, tx_m
 
 #ifdef MCS_LUT_SUPPORT
 	asic_mcs_lut_update(pAd, pEntry);
+	pEntry->LastTxRate = (USHORT) (pEntry->HTPhyMode.word);
 #endif /* MCS_LUT_SUPPORT */
 
 
@@ -2118,7 +2119,7 @@ VOID MlmeRAInit(RTMP_ADAPTER *pAd, MAC_TABLE_ENTRY *pEntry)
 #ifdef NEW_RATE_ADAPT_SUPPORT
 	MlmeSetMcsGroup(pAd, pEntry);
 
-	pEntry->lastRateIdx = 1;
+	pEntry->lastRateIdx = 0xFF;
 	pEntry->lowTrafficCount = 0;
 	pEntry->perThrdAdj = PER_THRD_ADJ;
 #endif /* NEW_RATE_ADAPT_SUPPORT */
